--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12173,3 +12173,224 @@ fieldset:disabled .btn {
   }
 }
 
+.footerClass {
+  /* Main Footer */
+  /* Copy Right Footer */
+  /* Footer Top */
+  /* Footer transparent */
+  /* Footer light */
+  /* Footer 4 */
+  /*==================== 
+    Widgets 
+  ====================== */
+}
+
+.footerClass footer .main-footer {
+  padding: 20px 0;
+  background: #252525;
+}
+
+.footerClass footer ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+.footerClass .footer-copyright {
+  background: #222;
+  padding: 5px 0;
+}
+
+.footerClass .footer-copyright .logo {
+  display: inherit;
+}
+
+.footerClass .footer-copyright nav {
+  float: right;
+  margin-top: 5px;
+}
+
+.footerClass .footer-copyright nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footerClass .footer-copyright nav ul li {
+  border-left: 1px solid #505050;
+  display: inline-block;
+  line-height: 12px;
+  margin: 0;
+  padding: 0 8px;
+}
+
+.footerClass .footer-copyright nav ul li a {
+  color: #969696;
+}
+
+.footerClass .footer-copyright nav ul li:first-child {
+  border: medium none;
+  padding-left: 0;
+}
+
+.footerClass .footer-copyright p {
+  color: #969696;
+  margin: 2px 0 0;
+}
+
+.footerClass .footer-top {
+  background: #252525;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+  border-bottom: 3px solid #222;
+}
+
+.footerClass footer.transparent .footer-top,
+.footerClass footer.transparent .main-footer {
+  background: transparent;
+}
+
+.footerClass footer.transparent .footer-copyright {
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3);
+}
+
+.footerClass footer.light .footer-top {
+  background: #f9f9f9;
+}
+
+.footerClass footer.light .main-footer {
+  background: #f9f9f9;
+}
+
+.footerClass footer.light .footer-copyright {
+  background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3);
+}
+
+.footerClass .footer- .logo {
+  display: inline-block;
+}
+
+.footerClass .widget {
+  padding: 20px;
+  margin-bottom: 40px;
+}
+
+.footerClass .widget.widget-last {
+  margin-bottom: 0px;
+}
+
+.footerClass .widget.no-box {
+  padding: 0;
+  background-color: transparent;
+  margin-bottom: 40px;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+}
+
+.footerClass .widget.subscribe p {
+  margin-bottom: 18px;
+}
+
+.footerClass .widget li a {
+  color: #ff8d1e;
+}
+
+.footerClass .widget li a:hover {
+  color: #4b92dc;
+}
+
+.footerClass .widget-title {
+  margin-bottom: 20px;
+}
+
+.footerClass .widget-title span {
+  background: #839FAD none repeat scroll 0 0;
+  display: block;
+  height: 1px;
+  margin-top: 25px;
+  position: relative;
+  width: 20%;
+}
+
+.footerClass .widget-title span::after {
+  background: inherit;
+  content: "";
+  height: inherit;
+  position: absolute;
+  top: -4px;
+  width: 50%;
+}
+
+.footerClass .widget-title.text-center span,
+.footerClass .widget-title.text-center span::after {
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+
+.footerClass .widget .badge {
+  float: right;
+  background: #7f7f7f;
+}
+
+.footerClass .typo-light h1,
+.footerClass .typo-light .h1,
+.footerClass .typo-light h2,
+.footerClass .typo-light .h2,
+.footerClass .typo-light h3,
+.footerClass .typo-light .h3,
+.footerClass .typo-light h4,
+.footerClass .typo-light .h4,
+.footerClass .typo-light h5,
+.footerClass .typo-light .h5,
+.footerClass .typo-light h6,
+.footerClass .typo-light .h6,
+.footerClass .typo-light p,
+.footerClass .typo-light div,
+.footerClass .typo-light span,
+.footerClass .typo-light small,
+.footerClass .typo-light .small {
+  color: #fff;
+}
+
+.footerClass ul.social-footer2 {
+  margin: 0;
+  padding: 0;
+  width: auto;
+}
+
+.footerClass ul.social-footer2 li {
+  display: inline-block;
+  padding: 0;
+}
+
+.footerClass ul.social-footer2 li a:hover {
+  background-color: #ff8d1e;
+}
+
+.footerClass ul.social-footer2 li a {
+  display: block;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+}
+
+.footerClass .btn {
+  background-color: #ff8d1e;
+  color: #fff;
+}
+
+.footerClass .btn:hover,
+.footerClass .btn:focus,
+.footerClass .btn.active {
+  background: #4b92dc;
+  color: #fff;
+  -ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  transition: all 250ms ease-in-out 0s;
+}
+
